# cybercuris

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
src/: backup.rs  clipboard.rs  keystore.rs  main.rs  memory_guard.rs  settings.rs  single_instance.rs  tray.rs
src/ui/: main.slint  mod.rs
tests/: cli_tests.rs
