[package]
name = "cybercuris"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "Apache 2.0"

[dependencies]
aes-gcm = { path = "/home/fge/Public_Sources/AEADs/aes-gcm" }
anyhow = "1.0.103"
clap = "4.5"
dirs = "6.0.0"
libc = "0.2.186"
pbkdf2 = "0.12"
rand = "0.9"
sha2 = "0.10"
slint = "1.17.1"
tokio = { version = "1.52.4", features = ["rt-multi-thread"] }
wayland-client = "0.31.14"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

[build-dependencies]
slint-build = "1.17.1"
